[project]
name = "gemini-code-review-action-gn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click==8.1.3",
    "google-auth[pyopenssl]>=2.42.1",
    "google-generativeai==0.5.2",
    "loguru==0.7.0",
    "requests==2.28.2",
    "vertexai>=1.71.1",
]

[dependency-groups]
dev = [
    "click==8.1.3",
    "google-generativeai==0.5.2",
    "loguru==0.7.0",
    "pre-commit>=3,<4",
    "pytest==4.3.0",
    "requests==2.28.2",
]
